--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mu_shop">
     <uses-permission android:name = "android.permission.ACCESS_COARSE_LOCATION" />
+     <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION" />
    <application
         android:label="RegisMe"
         android:icon="@mipmap/ic_launcher">
@@ -28,6 +29,7 @@
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
               />
+              
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -39,6 +41,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
             <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDfV16Un8Pqh04ua0C3yWCtA-hM8_rs9nY" />
+            android:value="AIzaSyAsUETIm-SkE_k9qiw7H7A4YQXGbG0iBXU" />
     </application>
 </manifest>
