--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,11 @@ dependencies:
   geolocator: ^7.0.3
   google_maps_flutter: ^2.0.2
   flutter_polyline_points: ^1.0.0
-  google_maps_controller: ^1.2.0
   google_fonts: ^2.1.0
-
+  flutter_staggered_animations: "^1.0.0"
   cupertino_icons: ^1.0.2
+  introduction_screen: ^2.1.0
+  floating_search_bar: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +28,12 @@ dev_dependencies:
 
 flutter:
 
+
+
   uses-material-design: true
+
+  assets:
+  - assets/
 
   fonts:
    - family: Lato
