login_screen_added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   introduction_screen: ^2.1.0
   floating_search_bar: ^0.3.0
+  material_floating_search_bar: ^0.3.4
+  firebase_core: ^1.2.1
+  firebase_auth: ^0.5.0
+  flutter_login_facebook:
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +38,8 @@ flutter:
 
   assets:
   - assets/
+  - assets/google.png
+
 
   fonts:
    - family: Lato
