--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   floating_search_bar: ^0.3.0
   material_floating_search_bar: ^0.3.4
   firebase_core: ^1.2.1
-  firebase_auth: ^0.5.0
+  firebase_auth: ^1.3.0
+  anim_search_bar: ^2.0.2
   flutter_login_facebook:
 
 dev_dependencies:
